--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-typescript-admin-template",
+  "name": "vue-tsx-admin-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,29 +7,41 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "typedoc": "./node_modules/typedoc/bin/typedoc --out ./docs  ./src  --target esnext --module esnext --mode modules --theme default --ignoreCompilerErrors",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.123",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "default-passive-events": "^1.0.10",
     "element-ui": "^2.6.3",
     "js-cookie": "^2.2.0",
+    "keymirror": "^0.1.1",
+    "lodash": "^4.17.11",
     "mockjs": "^1.0.1-beta3",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^3.0.0",
     "register-service-worker": "^1.6.2",
+    "sass": "^1.18.0",
+    "typedoc": "^0.14.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.1",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.2",
     "vue-svgicon": "^3.2.4",
+    "vue-tsx-support": "^2.3.0",
     "vuex": "^3.1.0",
     "vuex-class": "^0.3.2",
     "vuex-module-decorators": "^0.9.8"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.7",
     "@types/jest": "^24.0.11",
     "@types/js-cookie": "^2.2.1",
+    "@types/keymirror": "^0.1.1",
     "@types/mockjs": "^1.0.2",
     "@types/nprogress": "^0.0.29",
     "@types/webpack-env": "^1.13.9",
@@ -45,15 +57,27 @@
     "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-jsx-v-model": "^2.0.3",
+    "babel-plugin-vue-jsx-sync": "^0.0.5",
+    "css-loader": "^1",
     "eslint": "^5.15.3",
     "eslint-plugin-vue": "^5.2.2",
     "fibers": "^3.1.1",
     "jest": "^24.5.0",
-    "sass": "^1.17.3",
+    "patch-package": "^6.1.2",
+    "postinstall-postinstall": "^2.0.0",
     "sass-loader": "^7.1.0",
     "ts-jest": "^24.0.0",
+    "typedoc-plugin-external-module-name": "^2.0.0",
+    "typedoc-plugin-folder-modules": "^0.1.8",
+    "typedoc-plugin-internal-external": "^2.0.2",
+    "typedoc-plugin-single-line-tags": "^1.0.0",
+    "typedoc-webpack-plugin": "^1.1.4",
     "typescript": "3.3.4000",
+    "typings-for-css-modules-loader": "^1.7.0",
     "vue-cli-plugin-element": "^1.0.1",
+    "vue-cli-plugin-tsx-support": "^0.4.0",
+    "vue-jsx-hot-loader": "^1.4.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.29.6"
   }
