--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,14 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# typedoc
+docs
+# typings css module
+*module.*.d.ts
+
 # Editor directories and files
 .idea
-.vscode
+# .vscode
 *.suo
 *.ntvs*
 *.njsproj
