--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-tsx-admin-template",
+  "name": "vue-typescript-admin-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit",
-    "typedoc": "./node_modules/typedoc/bin/typedoc --out ./docs  ./src  --target esnext --module esnext --mode modules --theme default --ignoreCompilerErrors",
+    "typedoc": "./node_modules/typedoc/bin/typedoc ./src",
     "postinstall": "patch-package"
   },
   "dependencies": {
@@ -52,6 +52,7 @@
     "@vue/cli-plugin-typescript": "^3.5.1",
     "@vue/cli-plugin-unit-jest": "^3.5.1",
     "@vue/cli-service": "^3.5.1",
+    "@vue/eslint-config-prettier": "^4.0.1",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.29",
@@ -68,8 +69,8 @@
     "postinstall-postinstall": "^2.0.0",
     "sass-loader": "^7.1.0",
     "ts-jest": "^24.0.0",
+    "typedoc-plugin-external-module-map": "^1.0.0",
     "typedoc-plugin-external-module-name": "^2.0.0",
-    "typedoc-plugin-folder-modules": "^0.1.8",
     "typedoc-plugin-internal-external": "^2.0.2",
     "typedoc-plugin-single-line-tags": "^1.0.0",
     "typedoc-webpack-plugin": "^1.1.4",
